Initial commit of Task Master project

--- a/index.html
+++ b/index.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fair Task Divider</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task Master</title>
+  <!-- Google Font Import -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>Fair Task Divider</h1>
+  <div class="container">
+    <h1>Task Master</h1>
 
-        <div class="input-group">
-            <label for="employeeNames">Employee Names (comma-separated):</label>
-            <input type="text" id="employeeNames" placeholder="e.g., Alice, Bob, Charlie">
-            <small class="error-message" id="employeeError"></small>
-        </div>
-
-        <div class="input-group">
-            <label for="taskInput">Tasks (one per line or space-separated):</label>
-            <textarea id="taskInput" rows="6" placeholder="Task1&#10;Task2&#10;Task3"></textarea>
-            <small class="error-message" id="taskError"></small>
-        </div>
-
-        <button id="divideButton">Divide Tasks</button>
-
-        <h2>Task Assignments</h2>
-        <table id="resultTable">
-            <thead>
-                <tr>
-                    <th>Task</th>
-                    <th>Assigned Employee</th>
-                </tr>
-            </thead>
-            <tbody id="resultBody"></tbody>
-        </table>
-
-        <h2>Summary</h2>
-        <div id="summary"></div>
+    <div class="input-group">
+      <label for="employeeNames">Employee Names (comma-separated):</label>
+      <input type="text" id="employeeNames" placeholder="e.g., Alice, Bob, Charlie" />
+      <small class="error-message" id="employeeError"></small>
     </div>
 
-    <script src="script.js"></script>
+    <div class="input-group">
+      <label for="taskInput">Tasks (one per line):</label>
+      <textarea id="taskInput" rows="6" placeholder="Task1&#10;Task2&#10;Task3"></textarea>
+      <small class="error-message" id="taskError"></small>
+    </div>
+
+    <div class="button-group">
+      <button id="divideButton" data-original="Divide Tasks">Divide Tasks</button>
+      <button id="reassignButton" data-original="Reassign Tasks">Reassign Tasks</button>
+      <button id="copyButton" data-original="Copy Table">Copy Table</button>
+      <button id="clearButton" data-original="Clear Tasks">Clear Tasks</button>
+    </div>
+
+    <h2>Task Assignments</h2>
+    <table id="resultTable">
+      <thead>
+        <tr>
+          <th>Task</th>
+          <th>Assigned Employee</th>
+        </tr>
+      </thead>
+      <tbody id="resultBody"></tbody>
+    </table>
+
+    <h2>Summary</h2>
+    <div id="summary"></div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
